# nix-installer

./: Cargo.toml  README.md  build.sh  crates.json  default.nix  flake.nix  nixpkgs.json  release.nix
installer/: Cargo.toml
src/: installer.rs  lib.rs  main.rs
